--- a/control.cfg
+++ b/control.cfg
@@ -1,31 +1,9 @@
-#TODO BEFORE
-#add ~/.condarc to home directory
-#module load anaconda-python
-#run everything from home
-#git clone https://github.com:UW-Hydro/tonic.git
-#cd tonic
-#in tonic/models/vic/vic2netcdf.py, on line 86 I added: self.delimeter = '  ' (DL)
-#
-#conda create -n tonic2 python=3.4 netcdf4 pandas numpy scipy matplotlib xray basemap
-#source activate tonic2
-#conda install configobj
-
-#python setup.py install
-
-
-#load anaconda and python environment
-#module load anaconda-python
-#source activate tonic2
-
-#to run it run
-#vic_utils vic2netcdf ~/bin/VIC2nc_bal.cfg (config file)
-
-
-#VIC output to netcdf Configuration File
+#VIC Output to NetCDF Configuration File
+# Generalized configuration file for VTN script
 
 [OPTIONS]
 # Wild card enabled path
-input_files: /scratch/hydroclimate/vic/colorado/results/CNRM-CM5_rcp85/bal_*
+input_files: GCMINDIRECTORY
 
 # Input file format type
 # valid values: ascii, binary
@@ -43,7 +21,7 @@ input_file_format: ascii
 regular_grid: True
 
 # Output directory
-out_directory: /lclscratch/livingston/ECR/parallel/output/ 
+out_directory: GCMOUTDIRECTORY
 
 # Memory Mode Options:
 # standard: read entire vic file at once and immediately write each segment disk
@@ -56,7 +34,7 @@ memory_mode: big_memory
 chunksize: 100
 
 # Prefix for output files
-out_file_prefix: vic_COL_CNRM-CM5_rcp85
+out_file_prefix: GCMOUTPREFIX
 
 # netCDF format
 # Valid Values: NETCDF3_CLASSIC, NETCDF3_64BIT, NETCDF4_CLASSIC, and NETCDF4
